fixed spacing at bottom of new artist form

--- a/jaunt_project/static/jaunt/css/base.css
+++ b/jaunt_project/static/jaunt/css/base.css
@@ -11,7 +11,13 @@ p{
   font-size: 12pt
 }
 .footer + p{
-  font-size: 8pt
+  font-size: 8pt;
+  height: 70px,
+}
+.container {
+  background: white;
+  margin-bottom: 70px;
+  margin-top: 100px;
 }
 /* HIDE RADIO */
 [type=radio] { 
